--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -19,6 +19,7 @@
   font-size: 24px;
   font-weight: bold;
   margin: 5px 0;
+  color: #333;
 }
 
 .tag {
