--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -14,6 +14,7 @@
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+  color: #333;
 }
 
 .tr:nth-child(even) {
@@ -23,6 +24,7 @@
 .typeCell {
   display: flex;
   align-items: center;
+  color: #333;
 }
 
 .typeCell > svg {
